vlib/v/checker/tests/comptime_for.vv
fn unknown() {
	$for m in Huh.methods {}
	$for f in Huh.fields {}
	$for f in T.fields {
		$if f.typ is Huh {}
		$if f.typ is T {}
	}
	_ = m
}

fn gf<T>() {
	$for f in T.fields {
		$if f.typ is T {}
		$if f.typ is U {}
	}
	_ = f
}

struct S1 {
	i int
}

fn main() {
	gf<S1>()
}
